--- a/module_2/EDA (project 2)_.ipynb
+++ b/module_2/EDA (project 2)_.ipynb
@@ -6,9 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# proj 2\n",
-    "\n",
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -21,7 +18,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# proj 2\n",
+    "# coming soon ..."
+   ]
   }
  ],
  "metadata": {
